--- a/decide/booth/templates/booth/booth.html
+++ b/decide/booth/templates/booth/booth.html
@@ -26,6 +26,7 @@
         </b-alert>
 
         <div class="voting">
+	    <h1>Hola votante>
             <h1>[[ voting.id ]] - [[ voting.name ]]</h1>
 
             <!-- Register -->
